app/example/example.component.css
.title {
  font-size: 1.4em;
}


@media (min-width: 34em) {
  .content {
    padding: 0 20px;
  }
}

.blocks {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-left: 14px;
}

.col {
  align-content: flex-start;
}

.col h1 {
  font-size: 1em;
  font-weight: 300;
  margin: 0.4em 0;
}

.result {
  text-align: right;
}

